# dwn-rs

./: .envrc  .gitignore  Cargo.toml  Makefile.toml  README.md  bun.lockb  flake.nix  justfile  package-lock.json  package.json  pkgx.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: osv-scanner.yml  tests.yaml
crates/dwn-rs-core/: Cargo.toml
crates/dwn-rs-core/src/: auth.rs  errors.rs  lib.rs  message.rs  ser.rs  serde.rs  stores.rs  value.rs
crates/dwn-rs-core/src/auth/: authorization.rs  jws.rs  mod.rs
crates/dwn-rs-core/src/encryption/: errors.rs  hd_keys.rs  mod.rs
crates/dwn-rs-core/src/encryption/asymmetric/: mod.rs  publickey.rs  secp256k1.rs  secretkey.rs  x25519.rs
crates/dwn-rs-core/src/encryption/symmetric/: aead.rs  aes_ctr.rs  aes_gcm.rs  mod.rs  xsalsa20_poly1305.rs
crates/dwn-rs-core/src/events/: emitter.rs  mod.rs  stream.rs  subscription.rs
crates/dwn-rs-core/src/filters/: errors.rs  filter.rs  filter_key.rs  filters.rs  message_filters.rs  mod.rs  query.rs
crates/dwn-rs-core/src/interfaces/: mod.rs
crates/dwn-rs-core/src/interfaces/messages/: fields.rs  mod.rs  protocols.rs
crates/dwn-rs-core/src/interfaces/messages/descriptors/: general.rs  messages.rs  mod.rs  protocols.rs  records.rs
crates/dwn-rs-core/src/interfaces/replies/: messages.rs  mod.rs  protocols.rs  records.rs
crates/dwn-rs-core/src/messages/: mod.rs  records.rs
crates/dwn-rs-core/src/utils/: cid.rs  mod.rs
crates/dwn-rs-message-derive/: Cargo.toml
crates/dwn-rs-message-derive/src/: lib.rs
crates/dwn-rs-message-derive/src/derive/: descriptor.rs
crates/dwn-rs-messagestore/: Cargo.toml
crates/dwn-rs-messagestore/src/: lib.rs
crates/dwn-rs-messagestore/src/surrealdb/: errors.rs  expr.rs  message_store.rs  mod.rs  models.rs  query.rs
crates/dwn-rs-remote/: Cargo.toml  README.md
crates/dwn-rs-remote/src/: client.rs  errors.rs  jsonrpc.rs  lib.rs
crates/dwn-rs-remote/src/jsonrpc/: client.rs  dwn.rs  errors.rs  http.rs  mod.rs
crates/dwn-rs-stores/: Cargo.toml
crates/dwn-rs-stores/src/: cid.rs  errors.rs  lib.rs  stores.rs
crates/dwn-rs-stores/src/filters/: errors.rs  filter_key.rs  filters.rs  indexes.rs  mod.rs  query.rs  value.rs
crates/dwn-rs-stores/src/surrealdb/: auth.rs  core.rs  data_store.rs  errors.rs  event_log.rs  expr.rs  message_store.rs  mod.rs  models.rs  query.rs  resumable_task_store.rs  surrealdb.rs
crates/dwn-rs-wasm/: Cargo.toml  package.json  web-test-runner.config.mjs
crates/dwn-rs-wasm/src/: data.rs  event_stream.rs  events.rs  filter.rs  lib.rs  message.rs  query.rs  ser.rs  task.rs  tracing.rs
crates/dwn-rs-wasm/src/streams/: mod.rs  node_readable.rs  readable.js  stream.rs  sys.rs
crates/dwn-rs-wasm/src/surrealdb/: data_store.rs  event_log.rs  message_store.rs  mod.rs  resumable_task_store.rs
crates/dwn-rs-wasm/tests/: test.browser.js  test.js  test.spec.ts
crates/dwn-sdk-rs-core/: Cargo.toml  justfile
makefile.d/: coverage_grcov.makefile.toml
src/: errors.rs  indexes.rs  js.rs  lib.rs  message.rs  message_store.rs  query.rs  serde.rs
src/filters/: errors.rs  filters.rs  indexes.rs  mod.rs  query.rs  value.rs
src/js/: errors.rs  filter.rs  message.rs  mod.rs  query.rs
src/query/: expr.rs  mod.rs  query.rs
tests/: test.js
