[package]
name = "dwn-store-surrealdb-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'
strip = true
panic = 'abort'
codegen-units = 1

[features]
default = ["rustls", "kv-mem", "kv-speedb", "remote"]
wasm = ["rustls", "kv-mem", "kv-indxdb", "remote"]
remote = ["surrealdb/protocol-ws", "surrealdb/protocol-http"]
kv-indxdb = ["surrealdb/kv-indxdb"]
kv-speedb = ["surrealdb/kv-speedb"]
kv-rocksdb = ["surrealdb/kv-rocksdb"]
kv-mem = ["surrealdb/kv-mem"]
rustls = ["surrealdb/rustls"]

[dependencies]
async-trait = "0.1.73"
jose-jws = "0.1.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["raw_value"] }
thiserror = "1.0.47"
surrealdb = { version = "1.0.0-beta.10", default-features = false}
tokio = { version = "1.32.0", features = ["time", "macros"] }
serde_cbor = "0.11.2"
multihash = "0.19.0"
multihash-codetable = { version = "0.1.0", features = ["sha2", "digest", "serde"] }
cid = "0.10.1"
from_variants = "1.0.2"

#[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.64", features = ["AbortSignal", "console"] }
wasm-bindgen = { version = "0.2.87", features = ["serde", "serde_json"] }
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_family = "wasm")'.dependencies.tokio]
version = "1.32.0"
features = ["time", "macros"]

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1.32.0"
features = ["time", "macros", "rt-multi-thread"]
