[package]
name = "dwn-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'
strip = true
panic = 'abort'
codegen-units = 1

[features]
default = ["rustls", "kv-mem", "kv-speedb", "remote"]
wasm = ["rustls", "kv-mem", "kv-indxdb", "remote"]
remote = ["surrealdb/protocol-ws", "surrealdb/protocol-http"]
kv-indxdb = ["surrealdb/kv-indxdb"]
kv-speedb = ["surrealdb/kv-speedb"]
kv-rocksdb = ["surrealdb/kv-rocksdb"]
kv-mem = ["surrealdb/kv-mem"]
rustls = ["surrealdb/rustls"]

[dependencies]
async-trait = "0.1.73"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
surrealdb = { version = "1.1.1", default-features = false }
# tokio = { version = "1.32.0", features = ["time", "macros"] }
from_variants = "1.0.2"
libipld-cbor = "0.16.0"
libipld-core = { version = "0.16.0", features = [
    "serde",
    "serde-codec",
    "multibase",
] }
libipld = { version = "0.16.0", features = ["serde-codec"] }
chrono = { version = "0.4.30", features = ["serde"] }
multihash = { version = "0.19.1", features = ["serde", "serde-codec"] }
cid = { version = "0.11.0", features = ["serde-codec", "serde", "alloc"] }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.64", features = [
    "AbortSignal",
    "console",
    "AbortController",
    "WebSocket",
] }
wasm-bindgen = { version = "0.2.87", features = [
    "serde",
    "serde_json",
    "serde-serialize",
    "enable-interning",
] }
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
serde-aux = "4.2.0"
serde_repr = "0.1.17"
serde_with = "3.4.0"

# [target.'cfg(target_family = "wasm")'.dependencies.tokio]
# version = "1.32.0"
# features = ["time", "macros"]
#
# [target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
# version = "1.32.0"
# features = ["time", "macros", "rt-multi-thread"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
