[workspace]
resolver = "2"
members = [
    "crates/dwn-rs-core",
    "crates/dwn-rs-message-derive",
    "crates/dwn-rs-remote",
    "crates/dwn-rs-stores",
    "crates/dwn-rs-wasm",
]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.ci]
inherits = "test"
opt-level = 1
debug = false
incremental = false
overflow-checks = true
