[package]
name = "dwn-rs-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core library components for dwn-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
ipld-core = { version = "0.4.1", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
web5 = { path = "/Users/enmand/Code/unerror/web5-rs/crates/web5" }
url = { version = "2.5.0", features = ["serde"] }
derive_more = "0.99.18"

[dev-dependencies]
serde_json = "1.0.113"
