[package]
name = "dwn-rs-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core library components for dwn-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
xtra = { version = "0.6.0", features = [
    "wasm_bindgen",
    "sink",
    "instrumentation",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xtra = { version = "0.6.0", features = ["tokio", "sink", "instrumentation"] }

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
cid = { version = "0.11.1", features = ["serde"] }
futures-util = "0.3.30"
ipld-core = { version = "0.4.1", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_ipld_dagcbor = "0.6.0"
serde_repr = "0.1.17"
serde_with = "3.4.0"
tokio = { version = "1.39.2", features = ["io-util", "rt", "macros"] }
derive_more = { version = "1.0", features = ["display", "from", "try_into"] }
ssi-dids-core = "0.1.0"
base64 = "0.22.1"
ssi-jwk = "0.3.0"
ssi-jws = "0.3.0"
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
thiserror = "1.0.63"
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[dev-dependencies]
serde_json = "1.0.113"
