[package]
name = "dwn-rs-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core library components for dwn-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
xtra = { version = "0.6.0", features = [
    "wasm_bindgen",
    "sink",
    "instrumentation",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
xtra = { version = "0.6.0", features = ["tokio", "sink", "instrumentation"] }

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
cid = { version = "0.11.1", features = ["serde"] }
futures-util = "0.3.30"
ipld-core = { version = "0.4.1", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_ipld_dagcbor = "0.6.0"
serde_repr = "0.1.17"
serde_with = "3.4.0"
tokio = { version = "1.39.2", features = ["io-util", "rt", "macros"] }
derive_more = { version = "1.0", features = ["display", "from", "try_into"] }
ssi-dids-core = "0.1.0"
base64 = "0.22.1"
ssi-jwk = { version = "0.3.1", features = [
    "secp256r1",
    "secp256k1",
    "ed25519",
] }
ssi-jws = "0.3.0"
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
thiserror = "2.0.3"
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
bytes = "1.8.0"
rand = "0.8.5"
partially = { version = "0.2.1", features = ["derive"] }
derive_builder = "0.20.2"
multicodec = { git = "https://github.com/cryptidtech/rust-multicodec.git" } # Use moden fork, see gnunicorn/rust-multicodec#1
multihash = { version = "0.19.1", features = ["serde"] }
multihash-codetable = { version = "0.1.4", features = ["serde", "sha2"] }
dwn-rs-message-derive = { path = "../dwn-rs-message-derive" }
ssi-claims-core = "0.1.2"
k256 = { version = "0.13.4", features = ["ecdh"] }
hkdf = "0.12.4"
aes = "0.8.4"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
typenum = { version = "1.18.0", features = ["const-generics"] }
aes-gcm = "0.10.3"
crypto_secretbox = { version = "0.1.1", features = ["chacha20"] }
ctr = "0.9.2"
pin-project-lite = "0.2.16"
ed25519-dalek = "2.1.1"

[dev-dependencies]
serde_json = "1.0.113"
