[package]
name = "dwn-rs-remote"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Remote SDK components for dwn-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.12.8", features = [
    "stream",
    "json",
    "gzip",
    "deflate",
] }
futures-core = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
tokio = { version = "1.39.2", features = ["io-util", "rt", "macros", "rt-multi-thread"] }
thiserror = "1.0.64"
serde = "1.0.210"
serde_json = "1.0.128"
tower = "0.5.1"
http = "1.1.0"
http-body = "1.0.1"
bytes = "1.7.2"
dwn-rs-core = { path = "../dwn-rs-core", default-features = false }
ulid = { version = "1.1.3", features = ["serde"] }
futures-util = "0.3.30"
tokio-util = { version = "0.7.12", features = ["io", "rt"] }
tracing = { version = "0.1.40", features = ["log-always"] }
serde_repr = "0.1.19"

[dev-dependencies]
tracing-subscriber = "0.3.18"
