[package]
name = "dwn-rs-stores"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Traits and common types for implementing DWN stores for dwn-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["surreal-lib"]
surreal = []
surreal-lib = [
    "surreal",
    "surrealdb/rustls",
    "surrealdb/kv-mem",
    "surrealdb/kv-speedb",
    "surrealdb/protocol-ws",
    "surrealdb/protocol-http",
]
surreal-wasm = [
    "surreal",
    "surrealdb/rustls",
    "surrealdb/kv-mem",
    "surrealdb/kv-indxdb",
    "surrealdb/protocol-ws",
    "surrealdb/protocol-http",
]

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.73"
futures-util = "0.3.30"
chrono = { version = "0.4.30", features = ["serde"] }
cid = { version = "0.11.1", features = ["serde"] }
from_variants = "1.0.2"
ipld-core = { version = "0.4.1", features = ["serde"] }
multicodec = "0.1.0"
multihash = { version = "0.19.1", features = ["serde"] }
multihash-codetable = { version = "0.1.2", features = ["serde", "sha2"] }
thiserror = "1.0.47"
tokio = { version = "1.5.0", features = ["io-util"] }
tokio-stream = { version = "0.1.14", default-features = false, features = [
    "io-util",
] }
serde = { version = "1.0.183", features = ["derive"] }
serde_ipld_dagcbor = "0.6.0"
serde_repr = "0.1.17"
serde_with = "3.4.0"
surrealdb = { version = "1.2.2", default-features = false, optional = true }

dwn-rs-core = { path = "../dwn-rs-core" }
ulid = { version = "1.1.2", features = ["serde"] }
