[package]
name = "dwn-rs-stores"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Traits and common types for implementing DWN stores for dwn-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["surreal-lib"]
surrealdb = [
    "surrealdb/rustls",
    "surrealdb/kv-mem",
    "surrealdb/protocol-ws",
    "surrealdb/protocol-http",
]
surreal-lib = ["surrealdb", "surrealdb/kv-surrealkv"]
surreal-wasm = ["surrealdb", "surrealdb/kv-indxdb"]
no-std = []


[dependencies]
futures-util = "0.3.30"
chrono = { version = "0.4.37", features = ["serde", "wasmbind"] }
cid = { version = "0.11.1", features = ["serde"] }
ipld-core = { version = "0.4.1", features = ["serde"] }
multicodec = { git = "https://github.com/cryptidtech/rust-multicodec.git" } # Use moden fork, see gnunicorn/rust-multicodec#1
multihash = { version = "0.19.1", features = ["serde"] }
multihash-codetable = { version = "0.1.2", features = ["serde", "sha2"] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["io-util", "rt", "macros"] }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
] }
serde = { version = "1.0.183", features = ["derive"] }
serde_ipld_dagcbor = "0.6.0"
serde_with = "3.4.0"
surrealdb = { version = "2.0.2", default-features = false, optional = true }

ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }

dwn-rs-core = { path = "../dwn-rs-core", default-features = false }
serde_json = "1.0.122"
async-std = { version = "1.12.0", default-features = false, features = [
    "async-global-executor",
    "async-io",
    "futures-lite",
    "kv-log-macro",
    "pin-project-lite",
] }
memoize = { version = "0.4.2", default-features = false }

[dev-dependencies]
rand = "0.8.5"
