[package]
name = "dwn-rs-wasm"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "WASM-based build for dwn-rs, compatible with the dwn-sdk-js"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["surrealdb-lib"]
surrealdb = []
surrealdb-lib = ["surrealdb", "dwn-rs-stores/surreal-lib"]
surrealdb-wasm = ["surrealdb", "dwn-rs-stores/surreal-wasm"]
no-std = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies]
console_error_panic_hook = "0.1.7"
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
    "async-await",
    "async-await-macro",
] }
js-sys = "0.3.70"
serde = { version = "1.0.183", default-fatures = false, features = [
    "derive",
    "alloc",
] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2.93", default-features = false, features = [
    "spans",
] }
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "AbortSignal",
    "console",
    "AbortController",
    "WebSocket",
    "ReadableStream",
] }

serde_bytes = { version = "0.11.14", default-features = false, features = [
    "alloc",
] }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
] }
tracing-subscriber-wasm = "0.1.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "fmt",
    "smallvec",
    "tracing-log",
    "chrono",
    "json",
    "serde",
    "serde_json",
] }
futures-core = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }

dwn-rs-core = { path = "../dwn-rs-core", default-features = false }
dwn-rs-stores = { path = "../dwn-rs-stores", default-features = false, features = [
    "no-std",
] }
async-std = { version = "1.12.0", default-features = false, features = [
    "async-global-executor",
    "async-io",
    "futures-lite",
    "kv-log-macro",
    "pin-project-lite",
] }
